Clean up options a bit.
Options that affect tests or shims should not appear when configuring as
a header-only library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,28 +10,34 @@ include(CheckCXXCompilerFlag)
 include(CheckCXXSourceCompiles)
 include(CMakeDependentOption)
 
-if (${CMAKE_SYSTEM_NAME} EQUAL FreeBSD)
-  set(SNMALLOC_CLEANUP_DEFAULT THREAD_CLEANUP)
-elseif (UNIX)
-  set(SNMALLOC_CLEANUP_DEFAULT PTHREAD_DESTRUCTORS)
-else ()
-  set(SNMALLOC_CLEANUP_DEFAULT CXX11_DESTRUCTORS)
-endif()
-
-
 option(SNMALLOC_HEADER_ONLY_LIBRARY "Use snmalloc has a header-only library" OFF)
+# Options that apply globally
 option(USE_SNMALLOC_STATS "Track allocation stats" OFF)
 option(SNMALLOC_CI_BUILD "Disable features not sensible for CI" OFF)
-option(EXPOSE_EXTERNAL_PAGEMAP "Expose the global pagemap" OFF)
-option(EXPOSE_EXTERNAL_RESERVE "Expose an interface to reserve memory using the default memory provider" OFF)
-option(SNMALLOC_RUST_SUPPORT "Build static library for rust" OFF)
-option(SNMALLOC_STATIC_LIBRARY   "Build static libraries" ON)
 option(SNMALLOC_QEMU_WORKAROUND "Disable using madvise(DONT_NEED) to zero memory on Linux" Off)
-option(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE "Compile for current machine architecture" Off)
-set(SNMALLOC_STATIC_LIBRARY_PREFIX "sn_" CACHE STRING "Static library function prefix")
 option(SNMALLOC_USE_CXX17 "Build as C++17 for legacy support." OFF)
-set(SNMALLOC_CLEANUP ${SNMALLOC_CLEANUP_DEFAULT} CACHE STRING "The mechanism that snmalloc will use for thread destructors.  Valid options are: CXX11_DESTRUCTORS (use C++11 destructors, may depend on the C++ runtime library), PTHREAD_DESTRUCTORS (use pthreads, may interact badly with C++ on some platforms, such as macOS) THREAD_CLEANUP (depend on an explicit call to _malloc_thread_cleanup on thread exit, supported by FreeBSD's threading implementation and possibly elsewhere)")
-set_property(CACHE SNMALLOC_CLEANUP PROPERTY STRINGS THREAD_CLEANUP PTHREAD_DESTRUCTORS CXX11_DESTRUCTORS)
+# Options that apply only if we're not building the header-only library
+cmake_dependent_option(SNMALLOC_RUST_SUPPORT "Build static library for rust" OFF "NOT SNMALLOC_HEADER_ONLY_LIBRARY" OFF)
+cmake_dependent_option(SNMALLOC_STATIC_LIBRARY "Build static libraries" ON "NOT SNMALLOC_STATIC_LIBRARY" OFF)
+cmake_dependent_option(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE "Compile for current machine architecture" Off "NOT SNMALLOC_STATIC_LIBRARY" OFF)
+if (NOT SNMALLOC_HEADER_ONLY_LIBRARY)
+  # Pick a sensible default for the thread cleanup mechanism
+  if (${CMAKE_SYSTEM_NAME} STREQUAL FreeBSD)
+    set(SNMALLOC_CLEANUP_DEFAULT THREAD_CLEANUP)
+  elseif (UNIX)
+    set(SNMALLOC_CLEANUP_DEFAULT PTHREAD_DESTRUCTORS)
+  else ()
+    set(SNMALLOC_CLEANUP_DEFAULT CXX11_DESTRUCTORS)
+  endif()
+  # Specify the thread cleanup mechanism to use.
+  set(SNMALLOC_CLEANUP ${SNMALLOC_CLEANUP_DEFAULT} CACHE STRING "The mechanism that snmalloc will use for thread destructors.  Valid options are: CXX11_DESTRUCTORS (use C++11 destructors, may depend on the C++ runtime library), PTHREAD_DESTRUCTORS (use pthreads, may interact badly with C++ on some platforms, such as macOS) THREAD_CLEANUP (depend on an explicit call to _malloc_thread_cleanup on thread exit, supported by FreeBSD's threading implementation and possibly elsewhere)")
+  set_property(CACHE SNMALLOC_CLEANUP PROPERTY STRINGS THREAD_CLEANUP PTHREAD_DESTRUCTORS CXX11_DESTRUCTORS)
+
+  set(SNMALLOC_STATIC_LIBRARY_PREFIX "sn_" CACHE STRING "Static library function prefix")
+else ()
+  unset(SNMALLOC_STATIC_LIBRARY_PREFIX CACHE)
+  unset(SNMALLOC_CLEANUP CACHE)
+endif ()
 
 if (NOT SNMALLOC_CLEANUP STREQUAL CXX11_DESTRUCTORS)
   set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "")
