--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,13 @@ jobs:
         # Build each combination of OS and release/debug variants
         os: [ "ubuntu-latest", "ubuntu-18.04", "macos-11", "macos-10.15", "freebsd-12.2", "freebsd-13.0" ]
         build-type: [ Release, Debug ]
-        extra-cmake-flags: [ " " ]
+        extra-cmake-flags: [ "" ]
         # Modify the complete matrix
         include:
           # Provide the dependency installation for each platform
           - os: "ubuntu-18.04"
             dependencies: "sudo apt install ninja-build"
+            cmake-flags: "-DSNMALLOC_USE_CXX17=ON"
           - os: "ubuntu-latest"
             dependencies: "sudo apt install ninja-build"
           - os: "macos-11"
@@ -68,7 +69,7 @@ jobs:
     - name: Install build dependencies
       run: ${{ matrix.dependencies }}
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -G Ninja ${{ matrix.extra-cmake-flags }}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -G Ninja ${{ matrix.cmake-flags }} ${{ matrix.extra-cmake-flags }}
       # Build with a nice ninja status line
     - name: Build
       working-directory: ${{github.workspace}}/build
@@ -201,7 +202,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build
+      run: cmake -B ${{github.workspace}}/build -DSNMALLOC_USE_CXX17=ON
     - name: Install clang-tidy
       run: sudo apt install clang-tidy-9
     # Run the clang-format check and error if it generates a diff
@@ -213,7 +214,7 @@ jobs:
         git diff --exit-code
     - name: Run clang-tidy
       run: |
-        clang-tidy-9  src/override/malloc.cc  -header-filter="`pwd`/*" -warnings-as-errors='*' -export-fixes=tidy.fail -- -std=c++17 -mcx16 -DSNMALLOC_PLATFORM_HAS_GETENTROPY=0
+        clang-tidy-9  src/override/malloc.cc  -header-filter="`pwd`/*" -warnings-as-errors='*' -export-fixes=tidy.fail -- -std=c++17 -mcx16 -DSNMALLOC_PLATFORM_HAS_GETENTROPY=0 
         if [ -f tidy.fail ] ; then
           cat tidy.fail
           exit 1
