--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ name: snmalloc CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master, snmalloc2 ]
+    branches: [ main, snmalloc1 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
