--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ if (NOT SNMALLOC_HEADER_ONLY_LIBRARY)
     set(SNMALLOC_CLEANUP_DEFAULT THREAD_CLEANUP)
   elseif (UNIX AND NOT APPLE)
     set(SNMALLOC_CLEANUP_DEFAULT PTHREAD_DESTRUCTORS)
+  elseif(MINGW)
+    set(SNMALLOC_CLEANUP_DEFAULT PTHREAD_DESTRUCTORS)
   else ()
     set(SNMALLOC_CLEANUP_DEFAULT CXX11_DESTRUCTORS)
   endif()
@@ -184,6 +186,10 @@ if (WIN32)
   # documentation says)
   target_link_libraries(snmalloc INTERFACE $<$<NOT:$<BOOL:${WIN8COMPAT}>>:mincore>)
   message(STATUS "snmalloc: Avoiding Windows 10 APIs is ${WIN8COMPAT}")
+endif()
+
+if (MINGW)
+    target_link_libraries(snmalloc INTERFACE -lbcrypt)
 endif()
 
 # Detect support for cmpxchg16b; Werror is needed to make sure mcx16 must be used by targets
