--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -232,6 +232,23 @@ jobs:
             toolchain: ""
             extra-cmake-flags: -DWIN8COMPAT=TRUE
             variant: Windows 8 compatible
+          - os: windows-2022
+            build-type: Release
+            arch: Win32
+            toolchain: ""
+          - os: windows-2022
+            build-type: Debug
+            arch: Win32
+            toolchain: ""
+          - os: windows-2022
+            build-type: Release
+            arch: x64
+            toolchain: ""
+          - os: windows-2022
+            build-type: Debug
+            arch: x64
+            toolchain: ""
+        
       # Don't abort runners if a single one fails
       fail-fast: false
     runs-on: ${{ matrix.os }}
