--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [windows-latest, macos-11, ubuntu-latest]
         rust: [stable, nightly]
     steps:
     - uses: actions-rs/toolchain@v1
@@ -25,15 +25,17 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
+    - name: update dependency
+      run: |
+        if bash -c 'uname -s | grep 'Linux' >/dev/null'; then
+          sudo apt-get update -y && sudo apt-get --reinstall install -y libc6-dev
+        fi
+      shell: bash
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --all
-    - name: Run tests 1mib
-      run: cargo test --all --features 1mib
-    - name: Run tests 1mib build_cc
-      run: cargo test --all --features build_cc
     - name: Run tests debug
       run: cargo test --all --features debug
-    - name: Run tests cache-friendly
-      run: cargo test --all --features cache-friendly
+    - name: Run tests check
+      run: cargo test --all --features check
