--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "snmalloc-rs"
-version = "0.2.28"
+version = "0.3.0-beta.1+f1be609"
 authors = ["schrodingerzhu <i@zhuyi.fan>"]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 description = "rust bindings of snmalloc."
 keywords = ["snmalloc", "allocator"]
@@ -16,20 +16,17 @@ readme = "README.md"
 members = ["snmalloc-sys" ]
 
 [dependencies]
-snmalloc-sys = {version = "0.2.28", path = "snmalloc-sys", default-features = false }
+snmalloc-sys = {version = "0.3.0-beta.1", path = "snmalloc-sys", default-features = false }
 
 [features]
-default = ["snmalloc-sys/build_cmake","1mib"]
-build_cc = ["snmalloc-sys/build_cc","1mib"]
-1mib = ["snmalloc-sys/1mib"]
-16mib = ["snmalloc-sys/16mib"]
+default = ["snmalloc-sys/build_cmake"]
+build_cc = ["snmalloc-sys/build_cc"]
 qemu = ["snmalloc-sys/qemu"]
 stats = ["snmalloc-sys/stats"]
 debug = ["snmalloc-sys/debug"]
-cache-friendly = ["snmalloc-sys/cache-friendly"]
 android-lld = ["snmalloc-sys/android-lld"]
-android-shared-stl = ["snmalloc-sys/android-shared-stl"]
 native-cpu = ["snmalloc-sys/native-cpu"]
 local_dynamic_tls = ["snmalloc-sys/local_dynamic_tls"]
 win8compat = ["snmalloc-sys/win8compat"]
-usecxx20 = ["snmalloc-sys/usecxx20"]
+usecxx17 = ["snmalloc-sys/usecxx17"]
+check = ["snmalloc-sys/check"]
