--- a/snmalloc-sys/Cargo.toml
+++ b/snmalloc-sys/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "snmalloc-sys"
-version = "0.2.28"
+version = "0.3.0-beta.1+f1be609"
 authors = ["schrodingerzhu <i@zhuyi.fan>"]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 description = "rust raw bindings of snmalloc."
 keywords = ["snmalloc", "allocator"]
@@ -17,18 +17,15 @@ cc = {version = "1.0",optional=true}
 cmake = {version = "0.1",optional=true}
 
 [features]
-default = ["1mib","build_cmake"]
+default = ["build_cmake"]
 build_cc = ["cc"]
 build_cmake = ["cmake"]
-1mib = []
-16mib = []
 qemu = []
 stats = []
 debug = []
-cache-friendly = []
 android-lld = []
-android-shared-stl = []
 native-cpu = []
 local_dynamic_tls = []
 win8compat = []
-usecxx20 = []
+usecxx17 = []
+check = []
